[Coverity 1666219] Sizeof not portable in mpeg/es.c
While the program behaves correctly on the current processor architecture, it relies on potentially non-portable assumptions about type sizes.
In Control: The sizeof operator is used on a wrong argument that incidentally has the same size (CWE-467)
788 }
CID 1666219: (#2 of 2): Sizeof not portable (SIZEOF_MISMATCH)
suspicious_sizeof: Passing argument 16UL /* sizeof (seekpoint_t) */ to function vlc_alloc and then casting the return value to seekpoint_t ** is suspicious.
789 (*pp_title)->seekpoint = vlc_alloc( p_sys->chapters.i_count, sizeof(seekpoint_t) );
790 if( !(*pp_title)->seekpoint )