demux: mpeg: fix wrong allocation size for seekpoints

The seekpoint member is an array of pointers (seekpoint_t **), not an
array of structures. Allocating sizeof(seekpoint_t) wastes memory.

This patch fixes the allocation to use the pointer size.

Fixes #29368

Signed-off-by: Abderhman Gamal <abderhmangamal246@gmail.com>